fix: address critical security, performance, and robustness issues
Security:
- Remove hardcoded DB password and JWT secret defaults from application.properties
- Remove credential logging from DataInitializer startup output
- Restrict CORS allowed headers to explicit list instead of wildcard
- Add file type validation for Excel import endpoint

Performance:
- Fix N+1 query patterns in EmployeeService and ProjectService using batch allocation fetching
- Add JOIN FETCH to AllocationRepository queries for eager loading of employee/project
- Add batch query methods (findActiveByEmployeeIds, findActiveByProjectIds)

Robustness:
- Add @Valid + Jakarta validation annotations to DTOs (LoginRequest, ProjectDTO, AllocationDTO)
- Create typed ChangePasswordRequest DTO replacing raw Map<String, String>
- Add pagination parameter bounds (max page size 100, non-negative page)
- Add GlobalExceptionHandler (@RestControllerAdvice) for consistent error responses
- Fix Angular memory leaks: add DestroyRef + takeUntilDestroyed to all component subscriptions

https://claude.ai/code/session_01HbGYnuLx8eriG6zfAXrHTY