@@ -11,7 +11,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,8 +25,9 @@ public class EmployeeService {
 
     public List<EmployeeDTO> getAllEmployees(User currentUser) {
         List<Employee> employees = getFilteredEmployees(currentUser);
+        Map<Long, List<Allocation>> allocationsByEmployee = batchFetchAllocations(employees);
         return employees.stream()
-                .map(this::toDTO)
+                .map(e -> toDTO(e, allocationsByEmployee.getOrDefault(e.getId(), Collections.emptyList())))
                 .collect(Collectors.toList());
     }
 
@@ -39,7 +42,8 @@ public class EmployeeService {
             } else {
                 employeePage = employeeRepository.findByIsActiveTrue(pageable);
             }
-            return employeePage.map(this::toDTO);
+            Map<Long, List<Allocation>> allocationsByEmployee = batchFetchAllocations(employeePage.getContent());
+            return employeePage.map(e -> toDTO(e, allocationsByEmployee.getOrDefault(e.getId(), Collections.emptyList())));
         }
 
         // For managers: fetch all accessible employees, then filter and paginate
@@ -56,20 +60,20 @@ public class EmployeeService {
                     .collect(Collectors.toList());
         }
 
-        List<EmployeeDTO> dtoList = allAccessible.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-
         // Manual pagination from the filtered list
         int start = (int) pageable.getOffset();
-        int end = Math.min(start + pageable.getPageSize(), dtoList.size());
+        int end = Math.min(start + pageable.getPageSize(), allAccessible.size());
+        List<Employee> pageEmployees = start < allAccessible.size() ? allAccessible.subList(start, end) : List.of();
 
-        List<EmployeeDTO> pageContent = start < dtoList.size() ? dtoList.subList(start, end) : List.of();
+        Map<Long, List<Allocation>> allocationsByEmployee = batchFetchAllocations(pageEmployees);
+        List<EmployeeDTO> pageContent = pageEmployees.stream()
+                .map(e -> toDTO(e, allocationsByEmployee.getOrDefault(e.getId(), Collections.emptyList())))
+                .collect(Collectors.toList());
 
         return new org.springframework.data.domain.PageImpl<>(
                 pageContent,
                 pageable,
-                dtoList.size());
+                allAccessible.size());
     }
 
     public EmployeeDTO getEmployeeById(Long id, User currentUser) {
@@ -155,10 +159,22 @@ public class EmployeeService {
         return false;
     }
 
+    private Map<Long, List<Allocation>> batchFetchAllocations(List<Employee> employees) {
+        if (employees.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        List<Long> ids = employees.stream().map(Employee::getId).collect(Collectors.toList());
+        return allocationRepository.findActiveByEmployeeIds(ids).stream()
+                .collect(Collectors.groupingBy(a -> a.getEmployee().getId()));
+    }
+
     private EmployeeDTO toDTO(Employee employee) {
-        // Calculate current month allocation
-        int currentMonth = LocalDate.now().getMonthValue();
         List<Allocation> allocations = allocationRepository.findActiveByEmployeeId(employee.getId());
+        return toDTO(employee, allocations);
+    }
+
+    private EmployeeDTO toDTO(Employee employee, List<Allocation> allocations) {
+        int currentMonth = LocalDate.now().getMonthValue();
 
         double totalAllocation = 0.0;
         String status = "BENCH";
@@ -167,15 +183,12 @@ public class EmployeeService {
             String alloc = allocation.getAllocationForMonth(currentMonth);
             if (alloc != null) {
                 if (alloc.equalsIgnoreCase("B")) {
-                    // Bench - no allocation
                     status = "BENCH";
                 } else if (alloc.equalsIgnoreCase("P")) {
-                    // Prospect - potential allocation
                     if (status.equals("BENCH")) {
                         status = "PROSPECT";
                     }
                 } else {
-                    // Active allocation
                     try {
                         totalAllocation += Double.parseDouble(alloc);
                         status = "ACTIVE";
